// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<timeline> demo: render [basic] correctly 1`] = `
"<div style=\\"margin-bottom: 40px;\\"><span class=\\"sd-typography\\" style=\\"vertical-align: middle; margin-right: 8px;\\"> Reverse <!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"sd-radio-group sd-radio-group-size-medium sd-radio-group-direction-horizontal\\"><label class=\\"sd-radio sd-radio-checked\\"><input type=\\"radio\\" checked=\\"\\" class=\\"sd-radio-target\\" value=\\"false\\"><span class=\\"sd-icon-hover sd-icon-hover-disabled sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">No Reverse</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"true\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">Reverse</span></label></span></div>
<div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\">The first milestone</div>
      <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\">The second milestone</div>
      <div class=\\"sd-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\">The third milestone</div>
      <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [custom] correctly 1`] = `
"<div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> Code Review </div>
      <div class=\\"sd-timeline-item-label\\"><span class=\\"sd-tag sd-tag-size-medium sd-tag-checked\\"><span class=\\"sd-tag-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-check-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0l11.5-11.5Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path></svg></span> Passed
        <!--v-if-->
        <!--v-if--></span>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [direction] correctly 1`] = `
"<div>
  <div class=\\"sd-row sd-row-align-center sd-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><span class=\\"sd-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"sd-radio-group sd-radio-group-size-medium sd-radio-group-direction-horizontal\\"><label class=\\"sd-radio sd-radio-checked\\"><input type=\\"radio\\" checked=\\"\\" class=\\"sd-radio-target\\" value=\\"top\\"><span class=\\"sd-icon-hover sd-icon-hover-disabled sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">top</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"bottom\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">bottom</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"alternate\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-top sd-timeline-direction-horizontal\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-horizontal-top sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">
          <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/b5d834b83708a269b4562924436eac48.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Toutiao <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2012 </div>
            </div>
          </div>
        </div>
        <div class=\\"sd-timeline-item-label\\">2012-08</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-horizontal-top sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">
          <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Xigua Video <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2017 </div>
            </div>
          </div>
        </div>
        <div class=\\"sd-timeline-item-label\\">2017-05</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-horizontal-top sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">
          <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Pipidance <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2018 </div>
            </div>
          </div>
        </div>
        <div class=\\"sd-timeline-item-label\\">2018-07</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-horizontal-top sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-horizontal\\" style=\\"border-top-style: dashed;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot-custom\\">
            <div class=\\"sd-spin\\">
              <div class=\\"sd-spin-icon\\" style=\\"font-size: 12px;\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-loading sd-icon-spin\\" style=\\"font-size: 12px;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                  <path d=\\"M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6\\"></path>
                </svg></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"></div>
        <div class=\\"sd-timeline-item-label\\"></div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [dot] correctly 1`] = `
"<div style=\\"display: flex;\\">
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\" style=\\"margin-right: 40px;\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(0, 180, 42);\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The first milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The second milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-clock-circle\\" style=\\"font-size: 12px; color: rgb(245, 63, 63);\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M24 14v10h9.5m8.5 0c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\" style=\\"margin-right: 40px;\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-check\\" style=\\"font-size: 12px; padding: 2px; box-sizing: border-box; border-radius: 50%;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M41.678 11.05 19.05 33.678 6.322 20.95\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The first milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot-custom\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-check\\" style=\\"font-size: 12px; padding: 2px; box-sizing: border-box; border-radius: 50%;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
              <path d=\\"M41.678 11.05 19.05 33.678 6.322 20.95\\"></path>
            </svg></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <!--v-if-->
        <div class=\\"sd-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">The third milestone</div>
        <div class=\\"sd-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">The first milestone</div>
        <div class=\\"sd-timeline-item-label\\">2020-04-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The second milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-05-17</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-06-22</div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [icon] correctly 1`] = `
"<div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(0, 180, 42);\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The first milestone </div>
      <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\">The second milestone</div>
      <div class=\\"sd-timeline-item-label\\">2018-05-22</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 63, 63);\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The third milestone <svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"sd-icon sd-icon-exclamation-circle-fill\\" style=\\"font-size: 12px; margin-left: 4px;\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        </svg></div>
      <div class=\\"sd-timeline-item-label\\">2020-06-22</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(201, 205, 212);\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The fourth milestone </div>
      <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [label] correctly 1`] = `
"<div>
  <div class=\\"sd-row sd-row-align-center sd-row-justify-start\\"><span class=\\"sd-typography\\">labelPosition: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"sd-radio-group sd-radio-group-size-medium sd-radio-group-direction-horizontal\\"><label class=\\"sd-radio sd-radio-checked\\"><input type=\\"radio\\" checked=\\"\\" class=\\"sd-radio-target\\" value=\\"same\\"><span class=\\"sd-icon-hover sd-icon-hover-disabled sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">same</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"relative\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">relative</span></label></span></div>
  <div class=\\"sd-row sd-row-align-center sd-row-justify-start\\" style=\\"margin: 20px 0px 24px;\\"><span class=\\"sd-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"sd-radio-group sd-radio-group-size-medium sd-radio-group-direction-horizontal\\"><label class=\\"sd-radio sd-radio-checked\\"><input type=\\"radio\\" checked=\\"\\" class=\\"sd-radio-target\\" value=\\"left\\"><span class=\\"sd-icon-hover sd-icon-hover-disabled sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">left</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"right\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">right</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"alternate\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(82, 196, 25);\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The first milestone </div>
        <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\" labelposition=\\"same\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 34, 45);\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The second milestone </div>
        <div class=\\"sd-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [mode] correctly 1`] = `
"<div class=\\"sd-row sd-row-align-start sd-row-justify-space-between\\">
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-alternate sd-timeline-direction-vertical\\" style=\\"flex: 1;\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">The first milestone</div>
        <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">The second milestone</div>
        <div class=\\"sd-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-right sd-timeline-direction-vertical\\" style=\\"flex: 1;\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-right sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">The first milestone</div>
        <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-right sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">The second milestone</div>
        <div class=\\"sd-timeline-item-label\\">2018-05-12</div>
      </div>
      <!--v-if-->
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-right sd-timeline-item-label-same sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\"> The third milestone </div>
        <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<timeline> demo: render [pending] correctly 1`] = `
"<div class=\\"sd-row sd-row-align-center sd-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><label class=\\"sd-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"sd-checkbox-target\\" value=\\"false\\"><span class=\\"sd-icon-hover sd-checkbox-icon-hover\\"><div class=\\"sd-checkbox-icon\\"><!----></div></span><span class=\\"sd-checkbox-label\\"> horizontal &nbsp; &nbsp; </span></label><label class=\\"sd-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"sd-checkbox-target\\" value=\\"false\\"><span class=\\"sd-icon-hover sd-checkbox-icon-hover\\"><div class=\\"sd-checkbox-icon\\"><!----></div></span><span class=\\"sd-checkbox-label\\"> reverse &nbsp; &nbsp; </span></label><label class=\\"sd-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"sd-checkbox-target\\" value=\\"false\\"><span class=\\"sd-icon-hover sd-checkbox-icon-hover\\"><div class=\\"sd-checkbox-icon\\"><!----></div></span><span class=\\"sd-checkbox-label\\"> pending &nbsp; &nbsp; </span></label><label class=\\"sd-checkbox\\" checked=\\"false\\"><input type=\\"checkbox\\" class=\\"sd-checkbox-target\\" value=\\"false\\"><span class=\\"sd-icon-hover sd-checkbox-icon-hover\\"><div class=\\"sd-checkbox-icon\\"><!----></div></span><span class=\\"sd-checkbox-label\\"> custom pendingDot </span></label></div>
<div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(82, 196, 25);\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The first milestone </div>
      <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\" style=\\"background-color: rgb(245, 34, 45);\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The second milestone </div>
      <div class=\\"sd-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\">The third milestone</div>
      <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [type] correctly 1`] = `
"<div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The first milestone <br><span class=\\"sd-typography sd-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"sd-timeline-item-label\\">2017-03-10</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The second milestone <br><span class=\\"sd-typography sd-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"sd-timeline-item-label\\">2018-05-12</div>
    </div>
    <!--v-if-->
  </div>
  <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-same sd-timeline-item-last\\">
    <div class=\\"sd-timeline-item-dot-wrapper\\">
      <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: dashed;\\"></div>
      <div class=\\"sd-timeline-item-dot-content\\">
        <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
      </div>
    </div>
    <div class=\\"sd-timeline-item-content-wrapper\\">
      <div class=\\"sd-timeline-item-content\\"> The third milestone <br><span class=\\"sd-typography sd-typography-secondary\\" style=\\"font-size: 12px; margin-top: 4px;\\"> This is a descriptive message <!----><!--v-if--><!--v-if--><!--v-if--></span></div>
      <div class=\\"sd-timeline-item-label\\">2020-09-30</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`<timeline> demo: render [vertical] correctly 1`] = `
"<div>
  <div class=\\"sd-row sd-row-align-center sd-row-justify-start\\" style=\\"margin-bottom: 24px;\\"><span class=\\"sd-typography\\">mode: &nbsp; &nbsp;<!----><!--v-if--><!--v-if--><!--v-if--></span><span class=\\"sd-radio-group sd-radio-group-size-medium sd-radio-group-direction-horizontal\\"><label class=\\"sd-radio sd-radio-checked\\"><input type=\\"radio\\" checked=\\"\\" class=\\"sd-radio-target\\" value=\\"left\\"><span class=\\"sd-icon-hover sd-icon-hover-disabled sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">left</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"right\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">right</span></label><label class=\\"sd-radio\\"><input type=\\"radio\\" class=\\"sd-radio-target\\" value=\\"alternate\\"><span class=\\"sd-icon-hover sd-radio-icon-hover\\"><span class=\\"sd-radio-icon\\"></span></span><span class=\\"sd-radio-label\\">alternate</span></label></span></div>
  <div role=\\"list\\" class=\\"sd-timeline sd-timeline-left sd-timeline-direction-vertical\\">
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-relative sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">
          <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/b5d834b83708a269b4562924436eac48.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Toutiao <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2012 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"sd-timeline-item-label\\">2012-08</div>
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-relative sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">
          <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Xigua Video <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2017 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"sd-timeline-item-label\\">2017-05</div>
    </div>
    <div role=\\"listitem\\" class=\\"sd-timeline-item sd-timeline-item-vertical-left sd-timeline-item-label-relative sd-timeline-item-last\\">
      <div class=\\"sd-timeline-item-dot-wrapper\\">
        <div class=\\"sd-timeline-item-dot-line sd-timeline-item-dot-line-is-vertical\\" style=\\"border-left-style: solid;\\"></div>
        <div class=\\"sd-timeline-item-dot-content\\">
          <div class=\\"sd-timeline-item-dot sd-timeline-item-dot-solid\\"></div>
        </div>
      </div>
      <div class=\\"sd-timeline-item-content-wrapper\\">
        <div class=\\"sd-timeline-item-content\\">
          <div class=\\"sd-row sd-row-align-start sd-row-justify-start\\" style=\\"display: inline-flex; align-items: center;\\"><img width=\\"40\\" style=\\"margin-right: 16px; margin-bottom: 12px;\\" src=\\"https://p1-arco.byteimg.com/tos-cn-i-uwbnlip3yd/385ed540c359ec8a9b9ce2b5fe89b098.png~tplv-uwbnlip3yd-png.png\\">
            <div style=\\"margin-bottom: 12px;\\"> Pipidance <div style=\\"font-size: 12px; color: rgb(78, 89, 105);\\"> Founded in 2018 </div>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class=\\"sd-timeline-item-label\\">2018-07</div>
    </div>
  </div>
</div>"
`;
